add comment resources